1.modify properties 2.bugfix：mysql bigint

--- a/pgcompare.properties
+++ b/pgcompare.properties
@@ -123,16 +123,16 @@ repo-sslmode=disable
 #source-schema=appuser
 
 # Sqlserver Example
-source-type=mssql
+source-type=mysql
 source-host=localhost
-source-port=1433
-source-dbname=source
-source-user=sa
-source-password=<YourStrong@Passw0rd>
+source-port=3307
+source-dbname=sink
+source-user=root
+source-password=my-secret-pw
 source-database-hash=false
 source-sslmode=disable
-source-schema=userschema
-source-schema=userschema
+source-schema=sink
+
 # Postgres Example
 #source-type=postgres
 #source-host=localhost
@@ -148,6 +148,17 @@ source-schema=userschema
 # target
 ##################################
 # Postgres Example
+#target-type=postgres
+#target-host=localhost
+#target-port=5432
+#target-dbname=sink
+#target-user=postgres
+#target-password=mysecretpassword
+#target-database-hash=true
+#target-sslmode=disable
+#target-schema=
+
+# target TDSQL
 target-type=postgres
 target-host=localhost
 target-port=5432
@@ -157,6 +168,8 @@ target-password=mysecretpassword
 target-database-hash=true
 target-sslmode=disable
 target-schema=userschema
+
+
 # Oracle Example
 #target-type=oracle
 #target-host=myorahost
